--- a/hyperion-dev.properties
+++ b/hyperion-dev.properties
@@ -2,7 +2,7 @@
     "configuration": {
         "foundationServices": {
             "EventP": {
-                "Hyperionsettings": {
+                "HyperionDEVsettings": {
                     "host": "#[aws-secret::dev/EventP#client-id]",
                     "port": "5545",
                     "client_id": {
