--- a/hyperion.properties
+++ b/hyperion.properties
@@ -2,8 +2,8 @@
     "configuration": {
         "foundationServices": {
             "EventP": {
-                "Hyperionsettings": {
-                    "host": "#[aws-secret::dev/EventP#client-id]",
+                "settings": {
+                    "host": "localhost",
                     "port": "5545",
                     "client_id": {
                         "smkey": "dev/EventP#client-id"
